<resources>
    <string name="app_name">클밍록</string>

    <!--  Menu  -->
    <string name="menu_map" translatable="false">Map</string>
    <string name="menu_record_list" translatable="false">List</string>
    <string name="menu_add_record" translatable="false">Add</string>
    <string name="menu_goals" translatable="false">Goals</string>
    <string name="menu_profile" translatable="false">Profile</string>
    <!--  TODO: Remove or change this placeholder text  -->

    <string name="zero" translatable="false">0</string>
    <string name="commas" translatable="false">,</string>

    <string name="reset_upper_case" translatable="false">RESET</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="accept">확인</string>
    <string name="cancel">취소</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="close">닫기</string>
    <string name="setting">설정</string>
    <string name="permission_re_request">권한재요청</string>
    <string name="start_en" translatable="false">Start</string>
    <string name="goal_en" translatable="false">Goal</string>
    <string name="edit_profile_picture">프로필 사진 수정</string>
    <string name="edit">수정</string>
    <string name="save">저장</string>

    <!--  Date  -->
    <string name="y_m_d_tilde_y_m_d_slash">%1$tY/%1$tm/%1$td ~ %2$tY/%2$tm/%2$td</string>
    <string name="y_m_d_tilde_y_m_d_dotted">%1$tY.%1$tm.%1$td ~ %2$tY.%2$tm.%2$td</string>
    <string name="y_m_d_slash">%1$tY/%1$tm/%1$td</string>

    <!--  Permission  -->
    <string name="title_permission_notice">필수 권한 허용 안내</string>
    <string name="contents_permission_notice">아래와 같은 이유로 권한 허용이 필요합니다.</string>
    <string name="permission_notice_location">
        &#8226; 위치\n
        &#160;&#160;지도 및 클라이밍장 위치 표시를 위해 반드시 필요한 권한입니다.
    </string>
    <string name="permission_notice_read_storage">
        &#8226; 저장공간\n
        &#160;&#160;프로필 이미지를 설정하기 위해 필요한 권한입니다.
    </string>
    <string name="permission_notice_comment">권한 허용을 위해 설정화면으로 이동합니다.</string>

    <!--  Hint  -->
    <string name="hint_search_keyword">장소, 주소 검색</string>
    <string name="hint_link_to_instagram" translatable="false">Link to Instagram</string>
    <string name="hint_instagram_user_name">사용자 이름에는 문자, 숫자, 밑줄 및 마침표만 입력할 수 있습니다.</string>
    <string name="hint_level_list_description">Level은 더클라임 클라이밍짐을\n기준으로 하고 있습니다.</string>


    <string name="d_of_d_day" translatable="false">D-</string>

    <string name="x_count" translatable="false">X %d</string>
    <string name="number_out_of_number" translatable="false">%1$d / %2$d</string>


    <string name="toast_input_instagram_user_name">인스타그램 ID를 입력해주세요.</string>
    <string name="toast_completed_revision">수정 완료~!</string>
    <string name="toast_completed_goals_update">목표 설정 완료~!</string>
    <string name="toast_please_try_again_later">잠시후 다시 시도해 주세요.</string>
    <string name="toast_check_your_network_connection">네트워크 상태를 확인해 주세요.</string>
    <string name="toast_profile_image_reset_contents">프로필 이미지를 초기화 하겠습니까?</string>
    <string name="toast_not_goal_setting">목표를 설정해 주세요.</string>
    <string name="toast_unusual_goal_setting">목표 값이 올바른지 확인해 주세요.</string>
    <string name="toast_not_goal_period_setting">목표 기간을 설졍해 주세요.</string>
    <string name="toast_unusual_goal_period">목표 기간이 올바른지 확인해 주세요.</string>


    <string name="notice_no_search_result_for_keyword">\"%s\" 에 대한 검색 결과가 없습니다.</string>
    <string name="notice_set_you_goal">당신의 목표를 설정해 주세요!!</string>
    <string name="notice_please_check_the_period_again">선택 하신 기간을 다시 확인해 주세요.</string>
    <string name="notice_let_is_record_achievement">운동을 기록해 보세요!</string>

    <!--  Title  -->
    <string name="title_nickname">닉네임</string>
    <string name="title_instagram_user_name">인스타그램 사용자 이름</string>
    <string name="title_goal_setting" translatable="false">Goal-Setting</string>
    <string name="title_set_goal_color" translatable="false">Set Color</string>
    <string name="title_goals" translatable="false">Goal</string>
    <string name="title_start_date" translatable="false">Start Date</string>
    <string name="title_end_date" translatable="false">End Date</string>

    <!--  Content  -->
    <string name="this_date_type_record">이번 %s 기록</string>
    <string name="exercise_time">운동 시간</string>
    <string name="achievement_total_count">완등 개수</string>
    <string name="exercise_count">운동 횟수</string>

    <!--  Default  -->
    <string name="default_zero" translatable="false">0</string>
    <string name="default_hyphen" translatable="false">-</string>
    <string name="default_hyphen_out_of_hyphen" translatable="false">- / -</string>
    <string name="default_y_m_d_tilde_y_m_d_slash">0000/00/00 ~ 0000/00/00</string>
    <string name="default_y_m_d_tilde_y_m_d_dotted">0000.00.00 ~ 0000.00.00</string>
    <string name="default_y_m_d_slash">0000/00/00</string>
    <string name="default_unknown" translatable="false">Unknown</string>
    <string name="default_question_mark" translatable="false">\?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>