<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_round_radius_8_stroke"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_goal_color_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_bold_xx_large"
        android:text="@string/default_question_mark"
        android:textColor="@color/light_gray"
        android:gravity="center"
        android:background="@drawable/bg_round_4_radius_8_stroke_dotted_8"
        app:layout_constraintHeight_min="84dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_goal_achievement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_medium_x_large"
        android:text="@string/title_goals"
        android:gravity="center"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_goal_color_setting"
        app:layout_constraintBottom_toTopOf="@id/tv_goal_achievement_period"
        app:layout_constraintStart_toEndOf="@id/tv_goal_color_setting"
        />

    <com.ihavesookchi.climbingrecord.util.ClearFocusEditText
        android:id="@+id/tv_goal_achievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_medium_large"
        android:textColorHint="@color/medium_gray"
        android:hint="@string/default_hyphen"
        android:maxLength="6"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:autofillHints="no"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_goal_achievement_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_goal_achievement_title"
        app:layout_constraintStart_toEndOf="@id/tv_goal_achievement_title"
        />

    <TextView
        android:id="@+id/tv_goal_achievement_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_medium_xx_small"
        android:text="@string/default_y_m_d_tilde_y_m_d_slash"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toBottomOf="@id/tv_goal_achievement_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_goal_color_setting"
        app:layout_constraintStart_toEndOf="@id/tv_goal_color_setting"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>