<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/colorOnPrimary"
    tools:context=".view.goals.ProfileItemChangeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_bot"
        android:adjustViewBounds="true"
        android:scaleType="center"
        android:background="@drawable/ic_circle_background"
        android:layout_marginTop="30dp"
        app:layout_constraintWidth_max="100dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_min="85dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_edit_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_bold_x_small"
        android:text="@string/edit_profile_picture"
        android:textColor="@color/cornflower_blue"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_profile_picture"
        >

        <TextView
            android:id="@+id/tv_instagram_user_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            style="@style/style_kcc_chassam_bold_x_small"
            android:text="@string/title_instagram_user_name"
            android:textColor="@color/light_gray"
            />

        <TextView
            android:id="@+id/tv_instagram_user_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"
            style="@style/style_kcc_chassam_medium_xx_small"
            android:text="@string/hint_instagram_user_name"
            android:textColor="@color/medium_gray"
            />

        <EditText
            android:id="@+id/et_instagram_user_name_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_medium_small"
            android:hint="@string/title_instagram_user_name"
            />

        <TextView
            android:id="@+id/tv_nickname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_bold_x_small"
            android:layout_marginTop="30dp"
            android:layout_marginStart="3dp"
            android:text="@string/title_nickname"
            android:textColor="@color/light_gray"
            />

        <EditText
            android:id="@+id/et_nickname_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_medium_small"
            android:hint="@string/title_nickname"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_bold"
        android:text="@string/edit"
        android:textColor="@color/light_gray"
        android:background="@drawable/bg_round_radius_8_stroke"
        android:backgroundTint="@color/dark_gray"
        android:layout_marginBottom="30dp"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>