<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_radius_8_stroke"
    android:padding="15dp"
    app:layout_constraintTop_toTopOf="parent"
    >

    <TextView
        android:id="@+id/tv_d_of_d_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_bold_xx_large"
        android:text="@string/d_of_d_day"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_day_of_d_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_bold_xx_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_d_of_d_day"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_goals_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_modify"
        app:layout_constraintWidth_max="24dp"
        android:maxWidth="24dp"
        android:adjustViewBounds="true"
        android:paddingBottom="8dp"
        android:paddingStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/ll_goal_achievement_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_d_of_d_day"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_first_goal_achievement_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_circle"
            app:layout_constraintWidth_max="24dp"
            android:maxWidth="24dp"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_first_goal_achievement_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_medium_large"
            android:text="@string/default_hyphen_out_of_hyphen"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tv_commas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_medium_large"
            android:text="@string/commas"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_second_goal_achievement_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_circle"
            app:layout_constraintWidth_max="24dp"
            android:maxWidth="24dp"
            android:adjustViewBounds="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_second_goal_achievement_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_medium_large"
            android:text="@string/default_hyphen_out_of_hyphen"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_goal_achievement_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_bold_xx_small"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/ll_goal_achievement_status_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>