<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_round_radius_8_stroke"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_tracking_by_date_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_exercise_count_layout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_exercise_count_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/tv_tracking_by_date_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_divider_first"
        >

        <TextView
            android:id="@+id/tv_exercise_count_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            style="@style/style_kcc_chassam_bold_x_small"
            android:text="@string/exercise_time"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_exercise_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_exercise_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_bold_x_large"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_exercise_count_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_divider_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_divider"
        app:layout_constraintWidth_percent="0.025"
        app:layout_constraintTop_toBottomOf="@id/tv_tracking_by_date_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_exercise_count_layout"
        app:layout_constraintEnd_toStartOf="@id/ll_achievement_total_count_layout"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_achievement_total_count_layout"
        android:layout_width="122dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_divider_second"
        app:layout_constraintStart_toEndOf="@id/iv_divider_first"
        app:layout_constraintTop_toBottomOf="@id/tv_tracking_by_date_type"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/tv_achievement_total_count_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            style="@style/style_kcc_chassam_bold_x_small"
            android:text="@string/achievement_total_count"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/tv_achievement_total_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/tv_achievement_total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_bold_x_large"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_achievement_total_count_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_divider_second"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_divider"
        app:layout_constraintWidth_percent="0.025"
        app:layout_constraintTop_toBottomOf="@id/tv_tracking_by_date_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_achievement_total_count_layout"
        app:layout_constraintEnd_toStartOf="@id/ll_exercise_time_layout"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_exercise_time_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/tv_tracking_by_date_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_divider_second"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/tv_exercise_time_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            style="@style/style_kcc_chassam_bold_x_small"
            android:text="@string/exercise_count"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_exercise_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_exercise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_kcc_chassam_bold_x_large"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_exercise_time_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_date_type_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_switch"
        app:layout_constraintWidth_max="24dp"
        android:maxWidth="24dp"
        android:adjustViewBounds="true"
        android:paddingBottom="8dp"
        android:paddingStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>