<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/colorOnPrimary"
    tools:context=".view.goals.GoalsAchievementSettingFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bt_back_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:padding="10dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="37dp"
        app:srcCompat="@drawable/ic_arrow_left" />

    <TextView
        android:id="@+id/tv_goal_setting_title"
        style="@style/style_kcc_chassam_bold_xx_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/title_goal_setting"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_goal_setting_title"
        app:layout_constraintBottom_toTopOf="@id/bt_edit_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_level_list_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_round_radius_8_stroke"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <View
                    android:id="@+id/vi_level_white"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_round_radius_8_left"
                    android:backgroundTint="@color/white" />

                <View
                    android:id="@+id/vi_level_yellow"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/theclimb_yellow" />

                <View
                    android:id="@+id/vi_level_orange"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/theclimb_orange" />

                <View
                    android:id="@+id/vi_level_green"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/theclimb_green" />

                <View
                    android:id="@+id/vi_level_blue"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/theclimb_blue" />

                <View
                    android:id="@+id/vi_level_red"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/theclimb_red" />

                <View
                    android:id="@+id/vi_level_purple"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/theclimb_purple" />

                <View
                    android:id="@+id/vi_level_gray"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/theclimb_gray" />

                <View
                    android:id="@+id/vi_level_brown"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/theclimb_brown" />

                <View
                    android:id="@+id/vi_level_black"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_hint_level_list_description"
                style="@style/style_kcc_chassam_medium_x_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hint_level_list_description"
                android:textAlignment="viewEnd"
                android:textColor="@color/steel_gray"
                app:layout_constraintTop_toBottomOf="@id/ll_level_list_layout"
                app:layout_constraintEnd_toEndOf="@id/ll_level_list_layout" />

            <include
                android:id="@+id/ic_goal_setting_one"
                layout="@layout/include_goals_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_hint_level_list_description" />

            <include
                android:id="@+id/ic_goal_setting_two"
                layout="@layout/include_goals_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/ic_goal_setting_one" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_edit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/style_kcc_chassam_bold"
        android:text="@string/save"
        android:textColor="@color/light_gray"
        android:background="@drawable/bg_round_radius_8_stroke"
        android:backgroundTint="@color/dark_gray"
        android:layout_marginBottom="30dp"
        android:fitsSystemWindows="false"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>